--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="form-floating z-1">
                             <input id="productImgDecoy" type="text" class="form-control glassy-bg inner" readonly placeholder="">
-                            <input id="productImg" type="file" class="position-relative top-0 bottom-0 start-0 end-0 opacity-100 inner" placeholder="">
+                            <input id="productImg" type="file" class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0 inner" placeholder="">
                             <span class="text-danger d-none">image must be included</span>
                             <label for="productImg">product image</label>
                         </div>
